--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <img src="image2.jpeg" alt="Image 2" class="slide">
         <img src="image3.jpeg" alt="Image 3" class="slide">
     </div>
-
+  <div>
+    <p>Eres fea alondra</p>
+  </div>
 </body>
 </html>
